--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -10,4 +10,5 @@ hibernate.format_sql=false
 hibernate.highlight_sql=true
 
 # Automatically export the schema
-hibernate.hbm2ddl.auto=create-drop
+hibernate.hbm2ddl.auto=update
+//create-drop
